# datastructure-master

./: CMakeLists.txt  README.md
数据结构/作业01 线性表/: 3025-创建.c  3026-插入.c  3027-输出.c  3028-求导.c  3029-相加.c  3030-相减.c
数据结构/作业02 链栈/: 3041-创建.c  3042-入栈.c  3043-判空.c  3044-出栈.c  3045-栈顶数据.c  3046-清除数据.c  3047-销毁.c  3049-中缀表达式转后缀表达式.c
数据结构/作业03 链队列/: 3058-创建.c  3059-入队.c  3060-判空.c  3061-出队.c  3062-队首数据.c  3063-清除数据.c  3064-销毁.c
数据结构/实验01 顺序表/: 3001-创建.c  3002-判空.c  3003-输出.c  3004-长度.c  3005-插入数据.c  3006-查找.c  3007-获取数据.c  3008-删除数据.c  3009-删除重复数据.c  3010-清除数据.c  3011-有序合并.c  3012-销毁.c
数据结构/实验02 单链表/: 3013-创建.c  3014-输出.c  3015-长度.c  3016插入数据I.c  3017-插入数据II.c  3018-插入数据III.c  3019-查找.c  3020-查找II.c  3021-删除节点I.c  3022-删除节点II.c  3023-清除数据.c  3024-销毁.c
数据结构/实验03 顺序栈/: 3031-创建.c  3032-判满.c  3033-入栈.c  3034-判空.c  3035-出栈.c  3036-栈顶数据.c  3037-清空栈.c  3038-销毁.c  3039-括号匹配.c  3040-后缀表达式求值.c
数据结构/实验04 顺序队列/: 3050-创建.c  3051-判满.c  3052-入队.c  3053-判空.c  3054-出队.c  3055-队首数据.c  3056-清除数据.c  3057-销毁.c
